Remove JUnit 4 dependencies and tests Refactor tests to work under JUnit 5 Add required dependencies to root pom.xml